--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,124 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&family=Open+Sans:wght@300;400&display=swap');
+*, ::before, ::after {
+    box-sizing: border-box;
+}
+
 body {
-    background-color: orange;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+
+    background-color: #F29422;
     color: white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    margin: 0;
+}
+
+.scrolls {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 1.25em;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.smooth {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scroll-snap-type: mandatory;
+    scroll-snap-points-y: repeat(100vh);
+    scroll-snap-type: y mandatory;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    display: flex;
+    width: 100%;
+    min-height: 59px;
+    background-image: linear-gradient(180deg, #1d1d1d, rgba(29, 30, 34, 0.1), transparent);
+    mix-blend-mode: luminosity;
+}
+
+.header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.header ul li {
+    margin: 0 1em;
+    padding: 1em;
+}
+
+.header ul li a {
+    position: relative;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 18pt;
+}
+
+.header ul li a::after {
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    content: '';
+    width: 0;
+    height: 3px;
+    transition: all 0.2s linear;
+}
+
+.header ul li a:hover::after {
+    width: 100%;
+    background-color: #f4f4f4;
+}
+
+section {
+    position: relative;
+    display: flex;
+    width: 100%;
+    min-height: 100vh;
+    flex-grow: column wrap;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    scroll-snap-align: center;
+}
+
+section:nth-child(3) {
+    background-color: #A62F24;
+    background-size: cover;
+}
+
+section:nth-child(4) {
+    background-color: #732119;
+}
+
+section:nth-child(5) {
+    background-color: #D92929;
+}
+
+section:nth-child(7) {
+    background-color: #000000;
+}
+
+#menu {
+    font-family: Open Sans Condensed;
+    font-weight: bold;
+    font-size: 24pt;
+    color: #FFFFFF;
 }
