--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ section:nth-child(7) {
     background-color: #000000;
 }
 
-#menu {
+#title {
     font-family: Open Sans Condensed;
     font-weight: bold;
     font-size: 24pt;
