--- a/css/main.css
+++ b/css/main.css
@@ -92,10 +92,16 @@ section {
     width: 100%;
     min-height: 100vh;
     flex-grow: column wrap;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    /* justify-content: center; */
     background-size: cover;
     scroll-snap-align: center;
+}
+
+section:nth-child(2) {
+    background-size: cover;
+    background-image: url(../img/coverbg.png);
+    background-position: center;
 }
 
 section:nth-child(3) {
@@ -115,9 +121,63 @@ section:nth-child(7) {
     background-color: #000000;
 }
 
-#title {
+#home #mainbox {
+    position: absolute;
+    top: 40vh;
+    left: 50vw;
+}
+
+#home #title {
     font-family: Open Sans Condensed;
     font-weight: bold;
-    font-size: 24pt;
+    font-size: 48pt;
     color: #FFFFFF;
+    position: relative;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+/* #home #subtitle::before {
+    position: absolute;
+    top: -3px;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: #f4f4f4;
+} */
+
+#home #subtitle {
+    position: relative;
+    left: 0;
+    top: 0;
+    margin-top: 0;
+    width: 35vw;
+    font-size: 20pt;
+    line-height: 22pt;
+    text-align: left;
+    font-weight: 300;
+}
+
+section .contentbox {
+    padding-top: 59px;
+    padding-left: 30px;
+    padding-right: 30px;
+    width: 100%;
+}
+
+section .contentbox h2.boxtitle {
+    text-transform: uppercase;
+    text-align: center;
+    font-family: Open Sans Condensed;
+    font-weight: bold;
+    font-size: 36pt;
+}
+
+section .contentbox p {
+    font-size: 18pt;
+    width: 60%;
+    min-width: 600px;
+    position: relative;
+    margin: auto;
 }
