--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,13 @@ section .contentbox div.boxtitle {
     width: 100%;
 }
 
+section#details div.contentbox {
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
 section#schedule .contentbox ul.sched {
     margin: 0;
     margin-top: 20px;
@@ -295,7 +302,13 @@ section#schedule .contentbox ul.sched li.schedday .syllabus {
     background-size: cover;
 }
 
+div.supporters {
+    padding-top: 25px;
+
+}
+
 img.logo {
+    margin-top: 10px;
     width: 450px;
     height: auto;
 }
