--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ section {
     /* align-items: center; */
     /* justify-content: center; */
     background-size: cover;
-    scroll-snap-align: center;
+    scroll-snap-align: start;
 }
 
 section:nth-child(2) {
@@ -157,7 +157,7 @@ section:nth-child(8) {
     position: relative;
     left: 0;
     top: 0;
-    margin-top: 0;
+    margin-top: 1ex;
     width: 35vw;
     font-size: 20pt;
     line-height: 22pt;
